# OpenSwiftUI

./: .gitignore  .swiftlint.yml  BUILD.bazel  CODE_OF_CONDUCT.md  LICENSE  Makefile  Package.swift  Package@swift-5.10.swift  Package@swift-5.4.swift  Package@swift-5.5.swift  Package@swift-5.6.swift  Package@swift-5.9.swift  README.md  WORKSPACE.bazel
.github/: CODEOWNERS.md
.github/workflows/: Bazel.yml  MacOS.yml  SwiftLint.yml  Ubuntu.yml  Windows.yml  swift.yml
Sources/OpenSwiftUI/Accessibility/Accessibility Fundamentals/: AccessibilityActionResult.swift  AccessibilityActionStorage.swift  AccessibilityAttachment.swift  AccessibilityAttachmentModifier.swift  AccessibilityChildBehavior.swift  AccessibilityProperties.swift  AccessibilityPropertiesEntry.swift  AccessibilityScrollAction.swift  AccessibilityTechnologies.swift  AccessibilityTechnologySet.swift  AccessibilityVoidAction.swift  AnyAccessibilityAction.swift  PlatformAccessibilityElementProtocol.swift  View+AccessibilityFundamentals.swift
Sources/OpenSwiftUI/Accessibility/Accessible Appearance/: EnvironmentValues+accessibilityAssistiveAccessEnabled.swift  EnvironmentValues+accessibilityDifferentiateWithoutColor.swift  EnvironmentValues+accessibilityDimFlashingLightsKey.swift  EnvironmentValues+accessibilityInvertColors.swift  EnvironmentValues+accessibilityLargeContentViewerEnabled.swift  (+6 more)
Sources/OpenSwiftUI/Animations/: AdditiveArithmetic.swift  Animatable.swift  Animation.swift  Transaction.swift  VectorArithmetic.swift
Sources/OpenSwiftUI/Foundation/: Never.swift
Sources/OpenSwiftUI/Images/: Interpolation.swift  Orientation.swift  ResizingMode.swift  Scale.swift  TemplateRenderingMode.swift
Sources/OpenSwiftUI/View Modifiers/: ModifiedContent.swift
Sources/OpenSwiftUI/View Tree/: AppGraph.swift  _Graph.swift  _GraphInputsModifier.swift  _GraphOutputs.swift  _Tree.swift
Sources/OpenSwiftUISample/: MyApp.swift
Sources/Sample/: MyApp.swift
Sources/macOSSample/: MyApp.swift
Tests/OpenSwiftUITests/: AppStorageTests.swift  AppTests.swift  BindingTests.swift  WindowGroupTests.swift
Tests/OpenSwiftUITests/Mocks/: AppMock.swift
Tests/Snapshot/: EmptyViewTests.swift
Tests/Unit/: AppTests.swift
docs/: metadata.json
docs/data/documentation/: openswiftui.json
docs/index/: index.json
(+1192 files in other folders)
